--- a/lib/public/testbed_event.html
+++ b/lib/public/testbed_event.html
@@ -4,37 +4,87 @@
         <script type="text/javascript" src="local://webworks.js"></script>
         <script type="text/javascript">
             var cb,
-                intervalId,
-                success = function (data, response) {
-                    console.log("success callback: " + data);
-                    intervalId = data;
-                };
+                batteryIntervalId,
+                batterySuccess = function (data, response) {
+                    console.log("Started battery level changed event");
+                    batteryIntervalId = data;
+                },
+                fooIntervalId,
+                fooSuccess = function (data, response) {
+                    console.log("Started foo event");
+                    fooIntervalId = data;
+                },
+                fooCallbacks = [];
 
-            function startListen() {
+            function startListenBatteryLevelChangedEvent() {
                 cb = function (data) {
-                    console.log("Yay! Data=" + data);
+                    console.log("Battery level changed! Data=" + data);
                 };
                 blackberry.system.event.onBatteryLevelChanged(cb);
             }
 
-            function stopListen() {
+            function stopListenBatteryLevelChangedEvent() {
                 blackberry.system.event.onBatteryLevelChanged(null);
             }
 
-            function startEvent() {
-                webworks.exec(success, null, "bb.fakeevents", "start", null, false);
+            function startBatteryLevelChangedEvent() {
+                webworks.exec(batterySuccess, null, "bb.fakeevents", "start", {"foo":false}, false);
             }
 
-            function stopEvent() {
-                webworks.exec(success, null, "bb.fakeevents", "stop", { "intervalId": intervalId }, false);
+            function stopBatteryLevelChangedEvent() {
+                webworks.exec(batterySuccess, null, "bb.fakeevents", "stop", { "intervalId": batteryIntervalId }, false);
+            }
+
+            function startListenFooEvent() {
+                var fooCb = createCallback();
+                fooCallbacks.push(fooCb);
+                blackberry.system.event.foo(fooCb);
+            }
+
+            function stopListenFooEvent() {
+                var id;
+
+                fooCallbacks.reduce(function (prev, current, index, array) {
+                    if (prev === undefined || !array[prev]) {
+                        id = index;
+                    }
+
+                    return id;
+                }, id);
+
+                if (id !== undefined && fooCallbacks[id]) {
+                    console.log("Stop listen foo, id=" + id);
+                    blackberry.system.event.foo(fooCallbacks[id], true);
+                    delete fooCallbacks[id];
+                }
+            }
+
+            function startFooEvent() {
+                webworks.exec(fooSuccess, null, "bb.fakeevents", "start", {"foo":true, "interval":5000}, false);
+            }
+
+            function stopFooEvent() {
+                webworks.exec(fooSuccess, null, "bb.fakeevents", "stop", { "intervalId": fooIntervalId }, false);
+            }
+
+            function createCallback() {
+                var callbackId = fooCallbacks.length;
+                return function (data) {
+                    console.log("Foo callback " + callbackId + " invoked! Data=" + data);
+                };
             }
         </script>
     </head>
     <body>
         <div>This is a testbed!</div>
-        <input type="button" onclick="startEvent()" value="Start Fake Event"><br>
-        <input type="button" onclick="stopEvent()" value="Stop Fake Event"><br>
-        <input type="button" onclick="startListen()" value="Start Listen"><br>
-        <input type="button" onclick="stopListen()" value="Stop Listen"><br>
+        <input type="button" onclick="startBatteryLevelChangedEvent()" value="Start Battery Event"><br>
+        <input type="button" onclick="stopBatteryLevelChangedEvent()" value="Stop Battery Event"><br>
+        <input type="button" onclick="startListenBatteryLevelChangedEvent()" value="Start Listen Battery Event"><br>
+        <input type="button" onclick="stopListenBatteryLevelChangedEvent()" value="Stop Listen Battery Event"><br><br><br>
+        <input type="button" onclick="startFooEvent()" value="Start Foo Event"><br>
+        <input type="button" onclick="stopFooEvent()" value="Stop Foo Event"><br>
+        <input type="button" onclick="startListenFooEvent()" value="Start Listen Foo Event"><br>
+        <input type="button" onclick="stopListenFooEvent()" value="Stop Listen Foo Event"><br>
     </body>
 </html>
+
