1. Send XHR with GET in order to get params 2. Changed framework.js and server.js for getting params 3. Fixed require in various places to workaround the ../.. problem in browser-require 4. require.load more files in index.html 5. Fixed webview.executeJavascript

--- a/lib/public/index.html
+++ b/lib/public/index.html
@@ -16,10 +16,18 @@
                           "lib/utils.js",
                           "lib/webview.js",
                           "lib/server.js",
+                          "lib/event.js",
                           "lib/policy/whitelist.js",
                           "lib/policy/folderAccess.js",
                           "lib/plugins/bridge.js",
-                          "lib/plugins/extension.js"
+                          "lib/plugins/extensions.js",
+                          "ext/blackberry.app/index.js",
+                          "ext/blackberry.app.event/index.js",
+                          "ext/blackberry.example.test/index.js",
+                          "ext/blackberry.system/index.js",
+                          "ext/blackberry.system.event/index.js",
+                          "ext/blackberry.system.event/device.js",
+                          "ext/blackberry.system.event/foo.js"
                         ]);</script>
     <script>
         function start() {
