Added event extension that can listen to change in battery pps object

--- a/dependencies/bootstrap/index.html
+++ b/dependencies/bootstrap/index.html
@@ -7,9 +7,11 @@
     <script src="./require.js"></script>
     <script src="./frameworkModules.js"></script>
     <script>
+        var JNEXT;
         function start() {
           require.load(frameworkModules);
           require('lib/framework').start();
+          JNEXT = require("lib/jnext");
         }
     </script>
   </head>
