--- a/dependencies/test-server/public/index.html
+++ b/dependencies/test-server/public/index.html
@@ -14,6 +14,7 @@
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="spec/blackberry.js"></script>
+  <script type="text/javascript" src="spec/blackberry.app.js"></script>
   
   <script type="text/javascript">
     var jasmineEnv = jasmine.getEnv();
