--- a/dependencies/test-server/public/index.html
+++ b/dependencies/test-server/public/index.html
@@ -4,13 +4,13 @@
 <head>
   <title>Jasmine Spec Runner</title>
 
-  <link rel="shortcut icon" type="image/png" href="lib/jasmine-1.1.0/jasmine_favicon.png">
+  <link rel="shortcut icon" type="image/png" href="lib/jasmine/lib/jasmine-core/jasmine_favicon.png">
 
   <script type="text/javascript" src="webworks.js"></script>
 
-  <link rel="stylesheet" type="text/css" href="lib/jasmine-1.1.0/jasmine.css">
-  <script type="text/javascript" src="lib/jasmine-1.1.0/jasmine.js"></script>
-  <script type="text/javascript" src="lib/jasmine-1.1.0/jasmine-html.js"></script>
+  <link rel="stylesheet" type="text/css" href="lib/jasmine/lib/jasmine-core/jasmine.css">
+  <script type="text/javascript" src="lib/jasmine/lib/jasmine-core/jasmine.js"></script>
+  <script type="text/javascript" src="lib/jasmine/lib/jasmine-core/jasmine-html.js"></script>
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="spec/blackberry.js"></script>
