--- a/test/test-app/automatic/SpecRunner.htm
+++ b/test/test-app/automatic/SpecRunner.htm
@@ -123,6 +123,7 @@
         <input type="checkbox" value="blackberry.pim.calendar">blackberry.pim.calendar</input><br />
         <input type="checkbox" value="blackberry.push">blackberry.push</input><br />
         <input type="checkbox" value="blackberry.system">blackberry.system</input><br />
+        <input type="checkbox" value="blackberry.ui.contextmenu">blackberry.ui.contextmenu</input><br />
         <input type="checkbox" value="blackberry.ui.dialog">blackberry.ui.dialog</input><br />
         <input type="checkbox" value="blackberry.ui.toast">blackberry.ui.toast</input><br />
         <input type="checkbox" value="automation/blackberry.ui.toast">blackberry.ui.toast (automation)</input><br />
