Adding share targets API to WebWorks blackberry.invoke.card
Fixes Issue: blackberry/BB10-WebWorks-Framework#303

Tested By: Igor Shneur <isheneur@rim.com>
Reviewed By: Nukul Bhasin <nbhasin@rim.com>

--- a/test/test-app/manual/index.htm
+++ b/test/test-app/manual/index.htm
@@ -11,4 +11,5 @@
     <a href="local:///manual/childWebView/main.html">Child Web Views</a><br />
     <a href="local:///manual/ContextMenu/index.htm">Context Menu</a><br />
     <a href="local:///manual/formcontrol/main.html">Form Control</a></br />
+    <a href="local:///manual/InvocationTest/index.htm">Share Invocation Test</a>
 </body>
