Modifies WebWorks framework to support multiple webviews
    Fixes NOTHING (OOPS!)

    This commit modifies several webkit event handlers to make them proper objects capable of supporting use across multiple webviews.

    It also modifies the origin policy to more easily support multiple webviews.

    Additionally this makes changes to the communication pipe for events to track and dispatch events across multiple webviews.

    Lastly the commit contains an experimental ext that creates webviews that take advantage of this new functionality

Reviewed By: Bryan Higgins <bhiggins@rim.com>
Tested By: Tracy Li <tli@rim.com>

--- a/test/test-app/index.html
+++ b/test/test-app/index.html
@@ -8,7 +8,7 @@
 </head>
 <body bgcolor="#FFEFD5">
     <div data-role="page">
-    
+
     <h2 data-role="header">WebWorks Smoke Test</h2>
 
     <div data-role="content">
@@ -16,6 +16,7 @@
         <li><a data-ajax="false" href="automatic/SpecRunner.htm">Run automated tests</a></li>
         <li><a data-ajax="false" href="manual/index.htm">Run manual tests</a></li>
         <li><a data-ajax="false" href="automation/SpecRunner.htm">Run automation tests</a></li>
+        <li><a data-ajax="false" href="experimental/index.htm">Experimental Extensions</a></li>
     </ol>
     </div>
 
