Adds blackberry.ui.cover extension. Issue #395.

--- a/test/test-app/manual/framework/SpecRunner.htm
+++ b/test/test-app/manual/framework/SpecRunner.htm
@@ -93,6 +93,7 @@
         <input type="checkbox" value="blackberry.pim.calendar">blackberry.pim.calendar</input><br />
         <input type="checkbox" value="ui/dialog/index">blackberry.ui.dialog</input><br />
         <input type="checkbox" value="blackberry.notification">blackberry.notification</input><br />
+        <input type="checkbox" value="blackberry.ui.cover">blackberry.ui.cover</input><br />
     </form>
     <br />
 
