--- a/test/test-app/automatic/SpecRunner.htm
+++ b/test/test-app/automatic/SpecRunner.htm
@@ -132,6 +132,7 @@
         <input type="checkbox" value="remoteFunctionCall">remoteFunctionCall</input><br />
         <input type="checkbox" value="blackberry.notification">blackberry.notification</input><br />
         <input type="checkbox" value="blackberry.sensors">blackberry.sensors</input><br />
+        <input type="checkbox" value="blackberry.ui.cover">blackberry.ui.cover</input><br />
     </form>
     <br />
 
