Converting manual tests for blackberry.invoke.card.invokeCamera to automated ones.
Fixes issue# blackberry/BB10-WebWorks-Framework#437

Reviewed By: Bryan Higgins <bhiggins@rim.com>
Tested By: Nukul Bhasin <nbhasin@rim.com>

--- a/test/test-app/automation/SpecRunner.htm
+++ b/test/test-app/automation/SpecRunner.htm
@@ -108,6 +108,7 @@
     <form id="featureList">
         <input type="checkbox" value="blackberry.app">blackberry.app</input><br />
         <input type="checkbox" value="blackberry.invoke.card.ics">blackberry.invoke.card.ics</input><br />
+        <input type="checkbox" value="blackberry.invoke.card.camera">blackberry.invoke.card.camera</input><br />
         <input type="checkbox" value="blackberry.ui.toast">blackberry.ui.toast</input><br />
     </form>
     <br />
