Updated test-app to run in Ripple
Modified the way specs are pulled in to use relative paths
rather then the local:/// scheme which will not work in
ripple

Also fixed a small issue with config.xml. It was being interpreted
as being malformed in the Chrome browser.

Tested in both Ripple and on device to ensure path changes work.

Reviewed By: Nukul Bhasin <nbhasin@rim.com>
Tested By: Nukul Bhasin <nbhasin@rim.com>

--- a/test/test-app/automatic/SpecRunner.htm
+++ b/test/test-app/automatic/SpecRunner.htm
@@ -42,7 +42,7 @@
             for (var i = 0; i < checkBoxes.length; i++) {
                 if (checkBoxes[i].checked)
                 {
-                    addScript("local:///automatic/spec/" + checkBoxes[i].value + ".js");
+                    addScript("spec/" + checkBoxes[i].value + ".js");
                 }
             }
             alert("The selected tests have been added, click the Run Jasmine button to execute the SpecRunner");
