--- a/test/test-app/automation/SpecRunner.htm
+++ b/test/test-app/automation/SpecRunner.htm
@@ -107,6 +107,7 @@
 
     <form id="featureList">
         <input type="checkbox" value="blackberry.app">blackberry.app</input><br />
+        <input type="checkbox" value="blackberry.invoke.card.ics">blackberry.invoke.card.ics</input><br />
         <input type="checkbox" value="blackberry.ui.toast">blackberry.ui.toast</input><br />
     </form>
     <br />
