Move automation tests to its own spec runner
Issue #442

--- a/test/test-app/index.html
+++ b/test/test-app/index.html
@@ -15,6 +15,7 @@
     <ol data-role="listview">
         <li><a data-ajax="false" href="automatic/SpecRunner.htm">Run automated tests</a></li>
         <li><a data-ajax="false" href="manual/index.htm">Run manual tests</a></li>
+        <li><a data-ajax="false" href="automation/SpecRunner.htm">Run automation tests</a></li>
     </ol>
     </div>
 
