--- a/test/test-app/automation/SpecRunner.htm
+++ b/test/test-app/automation/SpecRunner.htm
@@ -42,7 +42,7 @@
             for (var i = 0; i < checkBoxes.length; i++) {
                 if (checkBoxes[i].checked)
                 {
-                    addScript("spec/" + checkBoxes[i].value + ".js");
+                    addScript("local:///automation/spec/" + checkBoxes[i].value + ".js");
                 }
             }
             alert("The selected tests have been added, click the Run Jasmine button to execute the SpecRunner");
@@ -83,6 +83,20 @@
             };
             });
 
+        function showOverlay() {
+            var o = document.getElementById('overlay');
+            o.style.visibility = 'visible';
+            window.scrollTo(0,0);
+        }
+        function hideOverlay() {
+            var o = document.getElementById('overlay');
+            o.style.visibility = 'hidden';
+        }
+
+    function takeScreenshot() {
+       internal.automation.takeScreenshot("/accounts/1000/shared/camera/WebWorksScreenShot.bmp");
+    }
+
   </script>
 
 </head>
@@ -92,31 +106,8 @@
     <input id="reloadPage" type="button" value="Reload Page" onclick="window.location.reload(true);"><br /><br />
 
     <form id="featureList">
-        <!--include spec files here-->
         <input type="checkbox" value="blackberry.app">blackberry.app</input><br />
-        <input type="checkbox" value="blackberry.connection">blackberry.connection</input><br />
-        <input type="checkbox" value="blackberry.event">blackberry.event</input><br />
-        <input type="checkbox" value="blackberry.identity">blackberry.identity</input><br />
-        <input type="checkbox" value="invokeRequestEvent">invokeRequestEvent</input><br />
-        <input type="checkbox" value="blackberry.invoke">blackberry.invoke</input><br />
-        <input type="checkbox" value="blackberry.invoke.card">blackberry.invoke.card</input><br />
-        <input type="checkbox" value="blackberry.invoked">blackberry.invoked</input><br />
-        <input type="checkbox" value="blackberry.io.filetransfer">blackberry.io.filetransfer</input><br />
-        <input type="checkbox" value="blackberry.io">blackberry.io</input><br />
-        <input type="checkbox" value="blackberry">blackberry</input><br />
-        <input type="checkbox" value="blackberry.pim.contacts">blackberry.pim.contacts</input><br />
-        <input type="checkbox" value="blackberry.pim.calendar">blackberry.pim.calendar</input><br />
-        <input type="checkbox" value="blackberry.push">blackberry.push</input><br />
-        <input type="checkbox" value="blackberry.system">blackberry.system</input><br />
-        <input type="checkbox" value="blackberry.ui.contextmenu">blackberry.ui.contextmenu</input><br />
-        <input type="checkbox" value="blackberry.ui.dialog">blackberry.ui.dialog</input><br />
         <input type="checkbox" value="blackberry.ui.toast">blackberry.ui.toast</input><br />
-        <input type="checkbox" value="blackberry.bbm.platform">blackberry.bbm.platform</input><br />
-        <input type="checkbox" value="crossOrigin">crossOrigin</input><br />
-        <input type="checkbox" value="remoteFunctionCall">remoteFunctionCall</input><br />
-        <input type="checkbox" value="blackberry.notification">blackberry.notification</input><br />
-        <input type="checkbox" value="blackberry.sensors">blackberry.sensors</input><br />
-        <input type="checkbox" value="blackberry.ui.cover">blackberry.ui.cover</input><br />
     </form>
     <br />
 
@@ -124,5 +115,9 @@
     <input id="deselectAll" type="button" value="De-select All" />
     <input id="addSpecs" type="button" value="Add Specs" />
     <input id="start" type="button" value="Run Jasmine" /><br />
+    <div id="overlay">
+        <button onclick="takeScreenshot()" > Take ScreenShot </button>
+    </div>
+
 </body>
 </html>
