Automation for emailComposer card manual tests. Issue#441

--- a/test/test-app/automation/SpecRunner.htm
+++ b/test/test-app/automation/SpecRunner.htm
@@ -109,6 +109,7 @@
         <input type="checkbox" value="blackberry.app">blackberry.app</input><br />
         <input type="checkbox" value="blackberry.invoke.card.ics">blackberry.invoke.card.ics</input><br />
         <input type="checkbox" value="blackberry.ui.toast">blackberry.ui.toast</input><br />
+        <input type="checkbox" value="blackberry.invoke.card.emailComposer">blackberry.invoke.card.emailComposer</input><br />
     </form>
     <br />
 
