Automation for emailComposer card manual tests. Issue#441
Reviewed By: Bryan Higgins <bhiggins@rim.com>
Tested By: Nukul Bhasin <nbhasin@rim.com>

--- a/test/test-app/automation/SpecRunner.htm
+++ b/test/test-app/automation/SpecRunner.htm
@@ -110,6 +110,7 @@
         <input type="checkbox" value="blackberry.invoke.card.ics">blackberry.invoke.card.ics</input><br />
         <input type="checkbox" value="blackberry.invoke.card.camera">blackberry.invoke.card.camera</input><br />
         <input type="checkbox" value="blackberry.ui.toast">blackberry.ui.toast</input><br />
+        <input type="checkbox" value="blackberry.invoke.card.emailComposer">blackberry.invoke.card.emailComposer</input><br />
     </form>
     <br />
 
