Automating tests for blackberry.invoke.card.invokeMediaPlayer
Converting manual test for blackberry.invoke.card.invokeMediaPlayer to automated ones.

Fixes issue# blackberry/BB10-WebWorks-Framework#439

--- a/test/test-app/automation/SpecRunner.htm
+++ b/test/test-app/automation/SpecRunner.htm
@@ -111,12 +111,13 @@
     <form id="featureList">
         <input type="checkbox" value="blackberry.app">blackberry.app</input><br />
         <input type="checkbox" value="blackberry.invoke.card.calendar">blackberry.invoke.card.calendar</input><br />
-        <input type="checkbox" value="blackberry.invoke.card.ics">blackberry.invoke.card.ics</input><br />
         <input type="checkbox" value="blackberry.invoke.card.camera">blackberry.invoke.card.camera</input><br />
-        <input type="checkbox" value="blackberry.ui.contextmenu">blackberry.ui.contextmenu</input><br />
-        <input type="checkbox" value="blackberry.ui.toast">blackberry.ui.toast</input><br />
         <input type="checkbox" value="blackberry.invoke.card.emailComposer">blackberry.invoke.card.emailComposer</input><br />
         <input type="checkbox" value="blackberry.invoke.card.filepicker">blackberry.invoke.card.filepicker</input><br />
+        <input type="checkbox" value="blackberry.invoke.card.ics">blackberry.invoke.card.ics</input><br />
+        <input type="checkbox" value="blackberry.invoke.card.mediaplayer">blackberry.invoke.card.mediaplayer</input><br />
+        <input type="checkbox" value="blackberry.ui.contextmenu">blackberry.ui.contextmenu</input><br />
+        <input type="checkbox" value="blackberry.ui.toast">blackberry.ui.toast</input><br />
         <input type="checkbox" value="childWebView">ChildWebView</input><br />
     </form>
     <br />
