Removing the waiting for DOM content loaded to load the API's
Fixes Issue: blackberry/BB10-WebWorks-Framework#463

--- a/test/test-app/manual/index.htm
+++ b/test/test-app/manual/index.htm
@@ -11,6 +11,7 @@
     <a href="local:///manual/childWebView/main.html">Child Web Views</a><br />
     <a href="local:///manual/ContextMenu/index.htm">Context Menu</a><br />
     <a href="local:///manual/formcontrol/main.html">Form Control</a></br />
-    <a href="local:///manual/InvocationTest/index.htm">Share Invocation Test</a>
-    <a href="local:///manual/disableWebSecurity/main.html">Disable WebSecurity Test</a>
+    <a href="local:///manual/InvocationTest/index.htm">Share Invocation Test</a><br />
+    <a href="local:///manual/disableWebSecurity/main.html">Disable WebSecurity Test</a><br />
+    <a href="local:///manual/DynamicInjection/index.htm">Dynamic WebWorks Injection</a>
 </body>
