Automates manual invoke test suite

--- a/test/test-app/automation/SpecRunner.htm
+++ b/test/test-app/automation/SpecRunner.htm
@@ -110,6 +110,7 @@
 
     <form id="featureList">
         <input type="checkbox" value="blackberry.app">blackberry.app</input><br />
+        <input type="checkbox" value="blackberry.invoke">blackberry.invoke</input><br />
         <input type="checkbox" value="blackberry.invoke.card.calendar">blackberry.invoke.card.calendar</input><br />
         <input type="checkbox" value="blackberry.invoke.card.camera">blackberry.invoke.card.camera</input><br />
         <input type="checkbox" value="blackberry.invoke.card.emailComposer">blackberry.invoke.card.emailComposer</input><br />
