--- a/test/test-app/manual/ContextMenu/index.htm
+++ b/test/test-app/manual/ContextMenu/index.htm
@@ -103,7 +103,7 @@
         <br />
         <div align="left">
             <h1 align="center">Context menu tests - Custom contexts</h1>
-            <div align="left" data-webworks-context="myContext">
+            <div align="left" data-webworks-context='{"id":"2", "type":"myContext", "header":"The bug custom header", "subheader":"A custom subheader"}'>
                 <a href="http://www.google.com">This is a link with customContext</a>
                 <br />
                 <br />
@@ -127,8 +127,20 @@
                 <a href="http://www.w3.org"><img src="http://www.w3.org/2008/site/images/logo-w3c-mobile-lg.png"></a>
                 <br />
                 <br />
-                <h4>Empty div: with customContext</h4>
+                <h4>Empty div: with customContext id 2</h4>
             </div>
+
+            <a style="height:200px; width:600px; font-size: 40px;" href="#" data-webworks-context='{"id":"4", "type":"myContext", "header":"The bug custom header", "subheader":"A custom subheader"}'>
+                Link with an ID of 4
+            </a>
+            <br />
+            <br />
+            <a style="height:200px; width:600px; font-size: 40px;" href="#" data-webworks-context='{"id":"5", "type":"myContext", "header":"The bug custom header", "subheader":"A custom subheader"}'>
+                Link with an ID of 5
+            </a>
+
+            <br />
+            <br />
             <button onclick="addMenuItemContextCustom()">Add custom item to custom context ["myContext"]</button>
             <button onclick="removeMenuItemContextCustom()">Remove custom item from custom context ["myContext"]</button>
             <br />
