Add automated and manual tests for geolocation
Issue #468

Reviewed By: Nukul Bhasin <nbhasin@rim.com>
Tested By: Nukul Bhasin <nbhasin@rim.com>

--- a/test/test-app/automatic/SpecRunner.htm
+++ b/test/test-app/automatic/SpecRunner.htm
@@ -117,6 +117,7 @@
         <input type="checkbox" value="blackberry.notification">blackberry.notification</input><br />
         <input type="checkbox" value="blackberry.sensors">blackberry.sensors</input><br />
         <input type="checkbox" value="blackberry.ui.cover">blackberry.ui.cover</input><br />
+        <input type="checkbox" value="navigator.geolocation">navigator.geolocation</input><br />
     </form>
     <br />
 
