--- a/test/test-app/manual/index.htm
+++ b/test/test-app/manual/index.htm
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <style type="text/css">
+        a {
+            display: block;
+            font-size: 18pt;
+            margin-bottom: 20px;
+        }
+    </style>
 </head>
 <body>
     <button onclick="document.location.href='local:///index.html'">Back</button><br />
