Adding automation test for context menu to ensure context menu continues working.
Reviewed By: Nukul Bhasin <nbhasin@rim.com>
Tested By: Nukul Bhasin <nbhasin@rim.com>

--- a/test/test-app/automation/SpecRunner.htm
+++ b/test/test-app/automation/SpecRunner.htm
@@ -102,6 +102,9 @@
 </head>
 
 <body>
+
+    <h1> Automation tests </h1>
+
     <input id="backButton" type="button" value="Back" onclick="history.back();"/>
     <input id="reloadPage" type="button" value="Reload Page" onclick="window.location.reload(true);"><br /><br />
 
@@ -110,6 +113,7 @@
         <input type="checkbox" value="blackberry.invoke.card.calendar">blackberry.invoke.card.calendar</input><br />
         <input type="checkbox" value="blackberry.invoke.card.ics">blackberry.invoke.card.ics</input><br />
         <input type="checkbox" value="blackberry.invoke.card.camera">blackberry.invoke.card.camera</input><br />
+        <input type="checkbox" value="blackberry.ui.contextmenu">blackberry.ui.contextmenu</input><br />
         <input type="checkbox" value="blackberry.ui.toast">blackberry.ui.toast</input><br />
         <input type="checkbox" value="blackberry.invoke.card.emailComposer">blackberry.invoke.card.emailComposer</input><br />
         <input type="checkbox" value="blackberry.invoke.card.filepicker">blackberry.invoke.card.filepicker</input><br />
@@ -124,6 +128,5 @@
     <div id="overlay">
         <button onclick="takeScreenshot()" > Take ScreenShot </button>
     </div>
-
 </body>
 </html>
