Adds automated test for childWebview.
This simply covers the basic case of invoking the child webview and
clicks on a link in the child webview page to confirm that it actually
came up.

Reviewed By: Jeffrey Heifetz <jheifetz@rim.com>
Tested By: Jeffrey Heifetz <jheifetz@rim.com>

--- a/test/test-app/automation/SpecRunner.htm
+++ b/test/test-app/automation/SpecRunner.htm
@@ -113,6 +113,7 @@
         <input type="checkbox" value="blackberry.ui.toast">blackberry.ui.toast</input><br />
         <input type="checkbox" value="blackberry.invoke.card.emailComposer">blackberry.invoke.card.emailComposer</input><br />
         <input type="checkbox" value="blackberry.invoke.card.filepicker">blackberry.invoke.card.filepicker</input><br />
+        <input type="checkbox" value="childWebView">ChildWebView</input><br />
     </form>
     <br />
 
