Add automation tests for UI dialogs
Issue #504

Reviewed By: Hasan Ahmad <haahmad@rim.com>
Tested By: Hasan Ahmad <haahmad@rim.com>

--- a/test/test-app/automation/SpecRunner.htm
+++ b/test/test-app/automation/SpecRunner.htm
@@ -117,6 +117,7 @@
         <input type="checkbox" value="blackberry.invoke.card.ics">blackberry.invoke.card.ics</input><br />
         <input type="checkbox" value="blackberry.invoke.card.mediaplayer">blackberry.invoke.card.mediaplayer</input><br />
         <input type="checkbox" value="blackberry.ui.contextmenu">blackberry.ui.contextmenu</input><br />
+        <input type="checkbox" value="blackberry.ui.dialog">blackberry.ui.dialog</input><br />
         <input type="checkbox" value="blackberry.ui.toast">blackberry.ui.toast</input><br />
         <input type="checkbox" value="childWebView">ChildWebView</input><br />
     </form>
